Fix overflow-x

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,7 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
   /* Основные настройки шрифта */
   font-family: "Minecraft Cyrillic", serif;
   font-size: 0.625rem;
